Alterações de cores

--- a/index.html
+++ b/index.html
@@ -4,41 +4,58 @@
 <head>
   <meta charset="UTF-8">
   <title>Luciano Dutra</title>
+  <style>
+body{
+  background-color: #27292A;
+}
+
+.corletras1 {
+  color: #C1C1C2;
+}
+
+.titulos1 {
+  color: #FCFF5C;
+}
+
+
+
+
+  </style>
 </head>
 
 <body>
-  <h1>Luciano Dutra Cavalcante de Souza</h1>
+  <h1 class="titulos1">Luciano Dutra Cavalcante de Souza</h1>
   <img id="foto"
     src="https://media-exp1.licdn.com/dms/image/C4E03AQGABoGm3DwtxQ/profile-displayphoto-shrink_800_800/0/1621358198256?e=1651104000&v=beta&t=uouLaXJ7lXnbgieJK__9ehucBRiYIep62mkPdjSSQm0"
     alt="minha foto" width="400px">
-  <h2>Um pouco sobre mim</h2>
-  <p id="eu"><em>Olá, me chamo Luciano, tenho 28 anos, nasci e moro na cidade de João Pessoa - PB, formado em Engenharia
+  <h2 class="titulos1">Um pouco sobre mim</h2>
+  <p class="corletras1" id="eu"><em>Olá, me chamo Luciano, tenho 28 anos, nasci e moro na cidade de João Pessoa - PB, formado em Engenharia
       Civil desde 2017 e atualmente estudante da Trybe a procura de uma mudança de carreira.</em></p>
   <p></p>
-  <h3 id="Habilidades">Habilidades:</h3>
+  <h3 class="titulos1" id="Habilidades">Habilidades:</h3>
   <ul>
-    <li><strong>Criatividade</strong></li>
-    <li>Empatia</li>
-    <li>Adaptável</li>
-    <li>Flexível</li>
+    <li class="corletras1"><strong>Criatividade</strong></li>
+    <li class="corletras1">Empatia</li>
+    <li class="corletras1">Adaptável</li>
+    <li class="corletras1">Flexível</li>
   </ul>
   <p></p>
   <p></p>
-  <h4 id="sites">Site que costumo acessar</h4>
-  <a href="https://www.cnnbrasil.com.br/" target="_blank">CNN Brail</a><br>
-  <a href="https://tecnoblog.net/" target="_blank">Tecnoblog</a>
+  <h4 class="titulos1" id="sites">Sites que costumo acessar</h4>
+  <a class="corletras1" href="https://www.cnnbrasil.com.br/" target="_blank">CNN Brail</a><br>
+  <a class="corletras1" href="https://tecnoblog.net/" target="_blank">Tecnoblog</a>
   <p></p>
-  <h4 id="rede">Redes sociais</h4>
-  <a href="https://www.instagram.com/lucianoodutra/" target="_blank">Instagram</a><br>
-  <a href="https://www.linkedin.com/in/luciano-dutra-794598212/" target="_blank">Linkedin</a><br>
-  <a href="https://github.com/LucianooDutra" target="_blank">Github</a>
+  <h4 class="titulos1" id="rede">Redes sociais</h4>
+  <a class="corletras1" href="https://www.instagram.com/lucianoodutra/" target="_blank">Instagram</a><br>
+  <a class="corletras1" href="https://www.linkedin.com/in/luciano-dutra-794598212/" target="_blank">Linkedin</a><br>
+  <a class="corletras1" href="https://github.com/LucianooDutra" target="_blank">Github</a>
   <p></p>
-  <h4>Índice</h4>
-  <a href="#foto">Minha foto</a><br>
-  <a href="#eu">Conheça-me</a><br>
-  <a href="#Habilidades">Habilidaes</a><br>
-  <a href="#sites">Sites favoritos</a><br>
-  <a href="#rede">Redes sociais</a><br>
+  <h4 class="titulos1">Índice</h4>
+  <a class="corletras1" href="#foto">Minha foto</a><br>
+  <a class="corletras1" href="#eu">Conheça-me</a><br>
+  <a class="corletras1" href="#Habilidades">Habilidaes</a><br>
+  <a class="corletras1" href="#sites">Sites favoritos</a><br>
+  <a class="corletras1" href="#rede">Redes sociais</a><br>
   <p></p>
   <p></p>
 
