finalizaçao do terceiro dia de HTML e CSS

--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@
 </head>
 
 <body>
-  <h1 class="titulos1 h1">Luciano Dutra Cavalcante de Souza</h1>
-  <img class="imagemperfil" id="foto"
-    src="https://media-exp1.licdn.com/dms/image/C4E03AQGABoGm3DwtxQ/profile-displayphoto-shrink_800_800/0/1621358198256?e=1651104000&v=beta&t=uouLaXJ7lXnbgieJK__9ehucBRiYIep62mkPdjSSQm0"
-    alt="minha foto" width="400px">
-  <h2 class="titulos1">Um pouco sobre mim</h2>
-  <p class="corletras1" id="eu"><em>Olá, me chamo Luciano, tenho 28 anos, nasci e moro na cidade de João Pessoa - PB,
-      formado em Engenharia
-      Civil desde 2017 e atualmente estudante da Trybe a procura de uma mudança de carreira.<br>Nas horas vagas costumo
-      assistir filmes, ir à praia, praticar esportes e jogar online.</em></p>
+  <div>
+    <h1 class="titulos1 h1">Luciano Dutra Cavalcante de Souza</h1>
+    <div class="imagemdescrição">
+      <img class="imagemperfil" id="foto"
+        src="https://media-exp1.licdn.com/dms/image/C4E03AQGABoGm3DwtxQ/profile-displayphoto-shrink_800_800/0/1621358198256?e=1651104000&v=beta&t=uouLaXJ7lXnbgieJK__9ehucBRiYIep62mkPdjSSQm0"
+        alt="minha foto" width="350px">
+
+      <div class="descrição">
+        <h2 class="titulos1">Um pouco sobre mim</h2>
+        <p class="corletras1 descriçãoparagrafo" id="eu">Olá, me chamo Luciano, tenho 28 anos, nasci e moro na cidade de João Pessoa -
+            PB,
+            formado em Engenharia
+            Civil desde 2017 e atualmente estudante da Trybe a procura de uma mudança de carreira.<br>Nas horas vagas
+            costumo
+            assistir filmes, ir à praia, praticar esportes e jogar online.</p>
+      </div>
+    </div>
+  </div>
   <p></p>
-  <h3 class="titulos1" id="Habilidades">Habilidades:</h3>
+  <h3 class="titulos1" id="Habilidades">Habilidades</h3>
   <ul>
     <li class="corletras1">Criatividade</li>
     <li class="corletras1">Empatia</li>
