finalizaçao do terceiro dia de HTML & CSS

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
       <div class="descrição">
         <h2 class="titulos1">Um pouco sobre mim</h2>
-        <p class="corletras1 descriçãoparagrafo" id="eu">Olá, me chamo Luciano, tenho 28 anos, nasci e moro na cidade de João Pessoa -
-            PB,
-            formado em Engenharia
-            Civil desde 2017 e atualmente estudante da Trybe a procura de uma mudança de carreira.<br>Nas horas vagas
-            costumo
-            assistir filmes, ir à praia, praticar esportes e jogar online.</p>
+        <p class="corletras1 descriçãoparagrafo" id="eu">Olá, me chamo Luciano, tenho 28 anos, nasci e moro na cidade de
+          João Pessoa -
+          PB,
+          formado em Engenharia
+          Civil desde 2017 e atualmente estudante da Trybe a procura de uma mudança de carreira.<br>Nas horas vagas
+          costumo
+          assistir filmes, ir à praia, praticar esportes e jogar online.</p>
       </div>
     </div>
   </div>
